--- a/style.css
+++ b/style.css
@@ -10,7 +10,8 @@ img {
 	display: block;
 	margin-left: auto;
 	margin-right: auto;
-	width: 10%;
+	width: 90%;
+	/* width: 10%; */
 
 }
 
@@ -63,4 +64,8 @@ img {
 .days {
 	padding: 5px;
 	margin: 5px;
+}
+
+.calendar {
+	display: flex;
 }
